Correction css et auto select menu

--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -39,7 +39,7 @@ body {
 				}
 			}
 			
-			#actif {
+			.actif {
 				display: block;
 				background: url('img/lien_menu_actif.png') no-repeat;
 				color: #d3d3d3;
