- nettoyage du contrôleur des projets et ajout d'opérations sur les jalons et les tâches

--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -16,7 +16,7 @@ body {
 	a {
 		text-decoration: none;
 	}
-
+	
 	#barre {
 		float: left;
 		width: 250px;
@@ -86,6 +86,15 @@ body {
 		table {
 			width: 100%;
 			border: 1px solid #aaa;
+			
+			caption {
+				text-align: center;
+				color: #999;
+				font-size: 1.3em;
+				font-style: italic;
+				font-weight: bold;
+				margin-top: 10px;
+			}
 			
 			th {
 				padding: 7px;
