--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -75,7 +75,7 @@ body {
 		}
 		
 		h3 {
-			text-align: center;
+			text-align: right;
 			color: #666;
 			font-size: 1.4em;
 			font-style: italic;
