--- a/www/themes/glovz/global.less
+++ b/www/themes/glovz/global.less
@@ -32,8 +32,10 @@ body {
 			
 			a {
 				color: #a0a0a0;
-				padding: 10px 40px 10px 40px;
-			
+				padding: 0px 0px 0px 40px;
+                                height : 30px;
+                                display: block;
+
 				&:hover {
 					color: #d3d3d3;
 				}
@@ -43,8 +45,9 @@ body {
 				display: block;
 				background: url('img/lien_menu_actif.png') no-repeat;
 				color: #d3d3d3;
-				width: 275px;
+				width: 195px;
 				padding: 5px 40px 5px 40px;
+                                height: 30px;
 			}
 		}
 	
