Ajout progress bar + marie poppins

--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -133,4 +133,11 @@ body {
 			}
 		}
 	}
+        #progressbar {
+            
+            .ui-progressbar-value {
+                height: 10px;
+                background-image: url(img/pbar-ani.gif);
+            }
+        }
 }
