--- a/www/themes/glovz/global.less
+++ b/www/themes/glovz/global.less
@@ -202,7 +202,7 @@ body {
             
             .ui-progressbar-value {
                 height: 10px;
-                background-image: url(img/pbar-ani.gif);
+                background-image: url(img/pbar-ani-red.gif);
             }
         }
 }
