--- a/www/themes/glovz/global.less
+++ b/www/themes/glovz/global.less
@@ -199,9 +199,11 @@ body {
 		}
 	}
         #progressbar {
-            
+            margin: 10px 400px 0 0;
+            float: right;
+            height: 10px;
+            width: 200px;
             .ui-progressbar-value {
-                height: 10px;
                 background-image: url(img/pbar-ani-red.gif);
             }
         }
