--- a/trunk/www/themes/admin/niceforms/niceforms-default.css
+++ b/trunk/www/themes/admin/niceforms/niceforms-default.css
@@ -2,13 +2,13 @@
 .niceform fieldset {padding-bottom: 20px!important; padding-top: 20px!important;background:#f2f2e6; padding:10px; border:1px solid #fff; border-color:#fff #666661 #666661 #fff; margin-bottom:36px;}
 .niceform input, .niceform textarea, .niceform select {font:12px/12px Arial, Helvetica, sans-serif; padding:0;}
 .niceform fieldset.action {text-align:right;padding-right: 20px;padding-top: 10px; border-bottom-width: 0px; padding-bottom: 10px; background:#9da2a6; border-color:#e5e5e5 #797c80 #797c80 #e5e5e5; }
-.niceform legend {background:#bfbf30; color:#fff; font:17px/21px Calibri, Arial, Helvetica, sans-serif; padding:0 10px; margin:-26px 0 0 -11px; font-weight:bold; border:1px solid #fff; border-color:#e5e5c3 #505014 #505014 #e5e5c3;}
+.niceform legend {background:#bfbf30; color:#fff; font:17px/21px Calibri, Arial, Helvetica, sans-serif; padding:0 10px; margin:0px 0 0 -11px; font-weight:bold; border:1px solid #fff; border-color:#e5e5c3 #505014 #505014 #e5e5c3;}
 .niceform label {font-size:11px; font-weight:bold; color:#666;}
 .niceform label.opt {font-weight:normal;}
 .niceform dl {margin-left: 10px;clear:both;}
 .niceform dt {float:left; text-align:right; width:130px; line-height:25px; margin:0 10px 10px 0;margin-right:15px!important;margin-top:-5px;}
 .niceform dd {float:left; line-height:0px; margin:0 0 10px 0;}
-
+.dialogForm legend {display:none;}
 /*##########################################
 Script: Niceforms 2.0
 Theme: StandardBlue
@@ -26,6 +26,8 @@ URL: http://www.emblematiq.com/
 .NFRadio {cursor:pointer; position:absolute; display:block; width:13px; height:13px; border:1px solid transparent; background:url(img/radio.png) no-repeat 0 0; z-index:2;}
 /*Checkbox*/
 .NFCheck {cursor:pointer; position:absolute; width:12px; height:12px; border:1px solid transparent; background:url(img/checkbox.png) no-repeat 0 0; z-index:2;}
+.dialogForm .NFCheck {position:static!important;}
+
 /*Buttons*/
 .NFButton {width:auto; height:26px; color:#fff; padding:0 2px; background:url(img/button.png) repeat-x 0 0; cursor:pointer; border:none; font:10px/26px Tahoma, Arial, Helvetica, sans-serif; font-weight:bold; text-transform:uppercase; letter-spacing:1px; vertical-align:middle;}
 .NFButtonLeft, .NFButtonRight {width:6px; height:26px; vertical-align:middle;}
