--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -201,4 +201,8 @@ body {
                 background-image: url(img/pbar-ani-red.gif);
             }
         }
+        .ui-widget-overlay {
+            opacity : 0.5;
+            background: #000;
+        }
 }
