--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -36,6 +36,9 @@ body {
 			padding: 30px 0 30px 0;
 			
 			li {
+                                margin: 0;
+                                padding: 0;
+                                list-style-type: none;
 				line-height: 1.8em;
 			}
 			
@@ -155,7 +158,7 @@ body {
 			border: 1px solid #aaa;
 			
 			caption {
-				padding: 5px;
+                                padding: 5px;
 				text-align: center;
 				color: #555;
 				font-size: 1.4em;
@@ -193,10 +196,12 @@ body {
 		}
 	}
         #progressbar {
-            margin: 10px 400px 0 0;
+            margin: 10px 0px 0 0;
             float: right;
-            height: 10px;
-            width: 200px;
+            height: 20px;
+            width: 400px;
+            text-align: center;
+            font-size: 0.5em;
             .ui-progressbar-value {
                 background-image: url(img/pbar-ani-red.gif);
             }
@@ -204,5 +209,8 @@ body {
         .ui-widget-overlay {
             opacity : 0.5;
             background: #000;
+        }
+        .buttonRight {
+            float: right;
         }
 }
