--- a/www/themes/glovz/accueil.less
+++ b/www/themes/glovz/accueil.less
@@ -14,7 +14,7 @@
 body {
 	width: 420px;
 	margin: auto;
-	background: url('img/fond_accueil.png') repeat #1f1f1f;
+	background: url('../../themes/glovz/img/fond_accueil.png') repeat #1f1f1f;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #eae3d6;
 		
