--- a/www/themes/glovz/global.less
+++ b/www/themes/glovz/global.less
@@ -12,7 +12,7 @@
 
 // Style du site
 body {
-	background: url('img/fond.png') repeat-y #eae5e5;
+	background: url('../../themes/glovz/img/fond.png') repeat-y #eae5e5;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #111;
 	
@@ -30,7 +30,7 @@ body {
 		float: left;
 		width: 260px;
 		color: #ccc;
-		background: url('img/en-tete.png') no-repeat;
+		background: url('../../themes/glovz/img/en-tete.png') no-repeat;
 		
 		#menu {
 			padding: 30px 0 30px 0;
@@ -55,7 +55,7 @@ body {
 			
 			.actif {
 				display: block;
-				background: url('img/lien_menu_actif.png') no-repeat;
+				background: url('../../themes/glovz/img/lien_menu_actif.png') no-repeat;
 				color: #d3d3d3;
 				width: 195px;
 				padding: 5px 40px 5px 40px;
@@ -69,11 +69,11 @@ body {
 			text-align: center;
 			display: block;
 			height: 50px;
-			background: url('img/bouton.png') no-repeat 50px;
+			background: url('../../themes/glovz/img/bouton.png') no-repeat 50px;
 			
 			&:hover {
 				color: #a79d98;
-				background: url('img/bouton_survole.png') no-repeat 50px;
+				background: url('../../themes/glovz/img/bouton_survole.png') no-repeat 50px;
 			}
 		}
 	}
@@ -133,7 +133,7 @@ body {
 		#bloc_etape {
 			margin-bottom: 30px;
 			padding: 15px;
-			background: url('img/drapeau.png') no-repeat #f8f4f4 30px 20px;
+			background: url('../../themes/glovz/img/drapeau.png') no-repeat #f8f4f4 30px 20px;
 			border: 1px solid #e1dede;
 			.arrondi(10px);
 			
@@ -203,7 +203,7 @@ body {
             text-align: center;
             font-size: 0.5em;
             .ui-progressbar-value {
-                background-image: url(img/pbar-ani-red.gif);
+                background-image: url(../../themes/glovz/img/pbar-ani-red.gif);
             }
         }
         .ui-widget-overlay {
