--- a/www/themes/glovz/global.less
+++ b/www/themes/glovz/global.less
@@ -159,7 +159,6 @@ body {
 			
 			caption {
                                 padding: 5px;
-				text-align: center;
 				color: #555;
 				font-size: 1.4em;
 				font-weight: bold;
@@ -210,7 +209,17 @@ body {
             opacity : 0.5;
             background: #000;
         }
+        .ui-widget-header {
+            
+        }
         .buttonRight {
             float: right;
+            p {
+                line-height: 1em;
+            }
+        }
+        #buttonHistorique {
+            float: right;
+            margin-bottom: -20px;
         }
 }
