--- a/www/themes/glovz/global.less
+++ b/www/themes/glovz/global.less
@@ -222,4 +222,9 @@ body {
             float: right;
             margin-bottom: -20px;
         }
+        #dialogFormNouvelleTache {
+            p {
+                margin-bottom : 10px;
+            }
+        }
 }
