+ Correction images manquantes + Modification du design des pop-in + Debut creation de la page report (PDF)

--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -212,7 +212,19 @@ body {
             background: #000;
         }
         .ui-widget-header {
-
+            border: none;
+            background-image: none;
+            background-color: #CCCCCC;
+        }
+        .ui-dialog-titlebar {
+            background-color: #CCCCCC;
+        }
+        .ui-widget-content {
+            border : none;
+        }
+        .ui-dialog {
+            padding: 0;
+            background-color: #F6F3F3;
         }
         .buttonRight {
             float: right;
@@ -227,6 +239,15 @@ body {
         #dialogFormNouvelleTache {
             p {
                 margin-bottom : 10px;
+            }
+        }
+        /* formulaire validity */
+        .niceform {
+            
+            fieldset {
+                background-image: none;
+                background-color: #F6F3F3;
+                border : 0;
             }
         }
 }
