--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -205,6 +205,7 @@ body {
             font-size: 0.5em;
             .ui-progressbar-value {
                 background-image: url(../../themes/glovz/img/pbar-ani-red.gif);
+                margin: 0;
             }
         }
         .ui-widget-overlay {
@@ -241,6 +242,10 @@ body {
                 margin-bottom : 10px;
             }
         }
+        #dialFormNewTask {
+            background-color: #F6F3F3;
+        }
+
         /* formulaire validity */
         .niceform {
             
