bug bckgrnd color dans les pop in

--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -220,6 +220,9 @@ body {
         .ui-dialog-titlebar {
             background-color: #CCCCCC;
         }
+        .ui-dialog .ui-dialog-content {
+            background-color: #F6F3F3;
+        }
         .ui-widget-content {
             border : none;
         }
@@ -244,6 +247,12 @@ body {
         }
         #dialFormNewTask {
             background-color: #F6F3F3;
+        }
+        #slider {
+            border : 1px solid #DDD;
+            .ui-slider {
+                
+            }
         }
 
         /* formulaire validity */
