--- a/trunk/www/themes/glovz/global.less
+++ b/trunk/www/themes/glovz/global.less
@@ -1,15 +1,15 @@
 /**
- *	Thème général du site
+ *	ThÃ¨me gÃ©nÃ©ral du site
  *	@author Fabien Nouaillat
  */
 
 // Variables
-@fondBody: #eae5e5;
-@fondEnTete: #e5dddd;
-@grisTHead: #ccc;
-@fondTBody: #f8f4f4;
-@rougeLien: #b71414;
-@couleurTexte: #111;
+@fondBody		: #eae5e5;
+@fondEnTete		: #e5dddd;
+@grisTHead		: #ccc;
+@fondTBody		: #f8f4f4;
+@rougeLien		: #b71414;
+@couleurTexte	: #111;
 
 
 // Mixins
@@ -233,52 +233,65 @@ body {
     .ui-dialog-titlebar {
         background-color: #CCCCCC;
     }
-        .ui-dialog .ui-dialog-content {
-            background-color: #F6F3F3;
-        }
-        .ui-widget-content {
-            border : none;
-        }
-        .ui-dialog .ui-dialog-titlebar {
-            background-color: #CCCCCC;
-        }
-        .ui-dialog {
-            padding: 0;
-            background-color: #F6F3F3;
-            border: 0;
-        }
-        .buttonRight {
-            float: right;
-            p {
-                line-height: 1em;
-            }
-        }
-        #buttonHistorique {
-            float: right;
-            margin-bottom: -20px;
-        }
-        #dialogFormNouvelleTache {
-            p {
-                margin-bottom : 10px;
-            }
-        }
-        #dialFormNewTask {
-            background-color: #F6F3F3;
-        }
-        #slider {
-            border : 1px solid #DDD;
-            .ui-slider {
-                
-            }
-        }
 
-        /* formulaire validity */
-        .niceform {
-            
-            fieldset {
-                background-image: none;
-                background-color: #F6F3F3;
-                border : 0;
-            }
-        }
+	.ui-dialog .ui-dialog-content {
+		background-color: #F6F3F3;
+	}
+
+	.ui-widget-content {
+		border : none;
+	}
+
+	.ui-dialog .ui-dialog-titlebar {
+		background-color: #CCCCCC;
+	}
+
+	.ui-dialog {
+		padding: 0;
+		background-color: #F6F3F3;
+		border: 0;
+	}
+
+	.buttonRight {
+		float: right;
+
+		p {
+			line-height: 1em;
+		}
+	}
+
+	#buttonHistorique {
+		float: right;
+		margin-bottom: -20px;
+	}
+
+	#dialogFormNouvelleTache {
+
+		p {
+			margin-bottom : 10px;
+		}
+	}
+
+	#dialFormNewTask {
+		background-color: #F6F3F3;
+	}
+
+	#slider {
+		border : 1px solid #DDD;
+	}
+
+	/* Formulaire de validation */
+	.niceform {
+
+		fieldset {
+			background-image: none;
+			background-color: #F6F3F3;
+			border : 0;
+		}
+	}
 }
+
+/*
+	Fin du fichier : global.less
+	Chemin du fichier : /www/theme/glovz/
+*/
