--- a/trunk/www/themes/package/accueil.css
+++ b/trunk/www/themes/package/accueil.css
@@ -3,13 +3,14 @@
   -webkit-border-radius:5px;
   -moz-border-radius:5px;
 }
-.center { text-align:center; }
+.centrer { text-align:center; }
+.trebuchet { font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; }
 body {
-  width:420px;
+  width:450px;
   margin:auto;
   background:url('../../themes/glovz/img/fond_accueil.png') repeat #1f1f1f;
-  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
   color:#eae3d6;
+  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 body h1 {
   padding:50px;
@@ -22,21 +23,24 @@ body #contenu label {
   text-indent:10px;
 }
 body #contenu .saisie {
+  padding:2px;
+  font-size:1em;
+  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
   border-radius:5px;
   -webkit-border-radius:5px;
   -moz-border-radius:5px;
-  padding:2px;
-  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-  font-size:1em;
 }
 body #contenu #bouton {
   margin-top:20px;
   text-align:center;
 }
-body #contenu #bouton input {
+body #contenu #bouton button {
   width:140px;
-  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
   font-size:1em;
+  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  -moz-border-radius:5px;
 }
 body #contenu #erreur {
   text-align:center;
